tests/fixtures/invalid/divmod_none_int.py
# Cannot call divmod() with None, Int
x = divmod(None, 1)
